<resources>
    <string name="app_name">EnjoyTheWorld</string>
    <string name="rb0">精选</string>
    <string name="rb1">发现</string>
    <string name="rb2">作者</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="handpick_fragment">精选</string>
    <string name="find_fragment">发现</string>
    <string name="author_fragment">作者</string>


    <!--侧滑菜单-->
    <string name="menu_message">我的消息</string>
    <string name="menu_cache">我的缓存</string>
    <string name="menu_suggestion">意见反馈</string>
    <string name="menu_contribute">我要投稿</string>
    <!--recycleview包中的字符串-->
    <string name="action_settings">Settings</string>
    <string name="listview_loading">正在加载...</string>
    <string name="nomore_loading">没有更多了</string>


    <!--Author模块 Jancie-->
    <string name="text">作者</string>
    <string name="name">名字</string>
    <string name="title">标题</string>
    <string name="subTitle">子标题</string>
    <string name="description">描述</string>
    <string name="category">类别</string>
    <string name="duration">时长</string>
    <string name="xiegang">/</string>
    <string name="cache">缓存</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--自定义ViewPager模块-->
    <string-array name="jazzy_effects">
        <item>Standard</item>
        <item>Tablet</item>
        <item>CubeIn</item>
        <item>CubeOut</item>
        <item>FlipVertical</item>
        <item>FlipHorizontal</item>
        <item>Stack</item>
        <item>ZoomIn</item>
        <item>ZoomOut</item>
        <item>RotateUp</item>
        <item>RotateDown</item>
        <item>Accordion</item>
    </string-array>
</resources>
