<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="@dimen/pic_width"
              android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/iv_author_cover"
        android:layout_width="@dimen/pic_width"
        android:layout_height="@dimen/pic_height"
        android:src="@mipmap/ic_tab_strip_icon_pgc"
        android:layout_marginRight="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textStyle="bold"
        android:textSize="14sp"
        android:singleLine="true"
        android:ellipsize="end"
        android:id="@+id/tv_author_title"
        android:layout_below="@id/iv_author_cover"
        android:layout_marginLeft="@dimen/left"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/category"
        android:textSize="12sp"
        android:id="@+id/tv_author_title_category"
        android:layout_below="@id/tv_author_title"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="@dimen/left"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/xiegang"
        android:textSize="12sp"
        android:id="@+id/tv_author_title_xieguang"
        android:layout_below="@id/tv_author_title"
        android:layout_toRightOf="@id/tv_author_title_category"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="@dimen/line_spacing"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/duration"
        android:textSize="12sp"
        android:id="@+id/tv_author_title_duration"
        android:layout_below="@id/tv_author_title"
        android:layout_toRightOf="@id/tv_author_title_xieguang"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="@dimen/line_spacing"/>




</RelativeLayout>