<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.three.enjoytheworld.MainActivity">

    <!--内容区域-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <!--顶部-->
        <RelativeLayout
            android:id="@+id/rl_main_top"
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <!--<TextView
                android:id="@+id/iv_main_menu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:src="@mipmap/ic_action_menu"
                android:clickable="true"
                android:onClick="click"/>-->

            <TextView
                android:layout_marginLeft="10dp"
                android:layout_centerVertical="true"
                android:id="@+id/iv_main_menu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="Today"
                android:textColor="#000000"
                android:clickable="true"
                android:textSize="15sp"
                android:onClick="click"/>

            <TextView
                android:textColor="#000000"
                android:id="@+id/iv_main_eye"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="Eyepetizer"
                android:textSize="25sp"
                android:src="@mipmap/ic_action_focus"/>

            <ImageView
                android:layout_centerVertical="true"
                android:id="@+id/iv_main_search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:src="@mipmap/ic_action_search"/>
        </RelativeLayout>

        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal">

            <!--精选-->
            <RadioButton
                android:id="@+id/rb0"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:button="@null"
                android:checked="true"
                android:drawableTop="@drawable/radio_background0"
                android:gravity="center"
                android:paddingTop="5dp"
                android:text="@string/rb0"/>
            <!--发现-->
            <RadioButton
                android:id="@+id/rb1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:button="@null"
                android:drawableTop="@drawable/radio_background1"
                android:gravity="center"
                android:paddingTop="5dp"
                android:text="@string/rb1"/>
            <!--作者-->
            <RadioButton
                android:id="@+id/rb2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:button="@null"
                android:drawableTop="@drawable/radio_background2"
                android:gravity="center"
                android:paddingTop="5dp"
                android:text="@string/rb2"/>


        </RadioGroup>

        <android.support.v4.view.ViewPager
            android:id="@+id/viewPager_main"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/radio_group"
            android:layout_below="@id/rl_main_top">

        </android.support.v4.view.ViewPager>
    </RelativeLayout>

    <!--侧滑部分-->
    <android.support.design.widget.NavigationView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/navigationView"
        android:layout_width="250dp"
        android:layout_height="match_parent"
        android:layout_gravity="left"
        app:headerLayout="@layout/head"
        app:menu="@menu/menu">

    </android.support.design.widget.NavigationView>

</android.support.v4.widget.DrawerLayout>
